--- a/index.html
+++ b/index.html
@@ -325,6 +325,12 @@
         <p>
           Across these mechanistic pathways, a common feature is the ability of photoredox catalysts to cut the previously needed tie of redox activation and external energy input (such as heat). By using photoexcitation to control the electron transfer, other methods of catalysis can be used to generate intermediates in a much more flexible environment, previously only accessible under harsh conditions. This opens up compatibility with a much wider range of functional groups.<sup><a href="#ref-6">[6]</a></sup>
         </p>
+        <div class="figure">
+  <img src="photoredox.png" alt="Representative metallaphotoredox catalytic pathway involving SET">
+  <div class="figcaption">
+    <b>Figure X.</b> Representative metallaphotoredox catalytic sequence in which a photoexcited iridium photocatalyst mediates single-electron transfer (SET) to a nickel intermediate, enabling rapid bond-forming steps. Diagram drawn by author to illustrate a generalized mechanistic pathway.
+  </div>
+</div>
       </section>
 
       <section id="catalysts">
